sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:12: error: not found: value getNombreValeur
    while(i+ecart < getNombreValeur()){
                    ^